--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,105 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container-blue {
+  background-color: #1c5380;
+  height: 300px;
+  clear: both;
+}
+
+.left-panel {
+  margin: 0 auto;
+  position: relative;
+  padding-top: 100px;
+  width: 1000px;
+}
+.container-white {
+  margin: 0;
+  background-color: #fff;
+  height: 250px;
+}
+.iphone {
+  position: relative;
+  float: left;
+  width: 20%;
+}
+.right-panel {
+  position: relative;
+  float: right;
+  width: 35%;
+  margin-right: 300px;
+
+}
+
+.login-button {
+  background-color: #1c5380;
+  float: right;
+  color: #fff;
+  padding-right: 25px;
+  padding-top: 10px;
+  margin-top: 25px;
+}
+
+.content {
+  background-color: #fff;
+  position: relative;
+  float: right;
+  width: 35%;
+  margin-right: 100px;
+  border-radius: 15px;
+  box-shadow: 10px 10px 5px rgba(88, 88, 88, 0.6);
+  box-sizing: border-box;
+  padding: 25px;
+  margin-right: 300px;
+}
+
+.content h3 {
+  color: #06365f;
+}
+
+.content p {
+  color: grey;
+}
+
+.badge-android {
+  float: left;
+  width: 150px;
+  height: 50px;
+}
+
+.badge-iphone {
+  float: right;
+  width: 150px;
+  height: 50px;
+}
+
+.badge {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer {
+  position: relative;
+  padding-top: 100px;
+  font-size: 18px;
+  color: #1c5380;
+  display: inline-block;
+}
+
+
+footer ul {
+  display: inline-flex;
+}
+
+footer ul li {
+  list-style: none;
+  margin-left: 20px;
+  font-weight: 900;
+}
+
+.copy-footer {
+  color: grey;
+}
